# CloudCompare

./: CHANGELOG.md
.ci/: conda-win-open3d.yml  conda-win.yml
.github/workflows/: build-master-oseren.yml  merge_with_master  merge_with_master.yml
libs/qCC_db/include/: ccPointCloud.h
libs/qCC_db/src/: ccPointCloud.cpp
libs/qCC_io/cmake/: GDALSupport.cmake
plugins/core/IO/qPDALIO/src/: LASFilter.cpp
plugins/core/Standard/qM3C2/: CMakeLists.txt
plugins/core/Standard/qM3C2/include/: CMakeLists.txt  qM3C2Commands.h  qM3C2Dialog.h  qM3C2Process.h  qM3C2Tools.h  students_t_distribution_critical_values.h
plugins/core/Standard/qM3C2/src/: CMakeLists.txt  qM3C2.cpp  qM3C2Dialog.cpp  qM3C2DisclaimerDialog.cpp  qM3C2Process.cpp  qM3C2Tools.cpp
plugins/core/Standard/qM3C2/ui/: disclaimerDlg.ui  qM3C2Dialog.ui
qCC/: CMakeLists.txt  ccCommandLineCommands.cpp  ccCommandLineCommands.h  ccCommandLineParser.cpp  ccComparisonDlg.cpp  ccDrawNormalsWidget.cpp  ccDrawNormalsWidget.h  ccEntityAction.cpp  ccGraphicalSegmentationTool.cpp  ccSFvsSFSetRange.cpp  ccSFvsSFSetRange.h  ccSFvsSFWindowDlg.cpp  ccSFvsSFWindowDlg.h  ccSimpleSectionTool.cpp  ccSimpleSectionTool.h  ccSubsampleUsingNormalsDlg.cpp  ccSubsampleUsingNormalsDlg.h  ccWaveformDialog.cpp  ccWaveformDialog.h  icons.qrc  mainwindow.cpp  mainwindow.h
qCC/db_tree/: ccDBRoot.cpp  ccDBRoot.h
qCC/translations/: CloudCompare_ja.ts
qCC/ui_templates/: ccDrawNormalsWidget.ui  ccSubsampleUsingNormalsDlg.ui  comparisonDlg.ui  mainWindow.ui  sfVsSFSetRange.ui  sfVsSFWindowDlg.ui
